# godotsource

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
demo/: .gitignore  project.godot
demo/scenes/: main.tscn
demo/scripts/: main.gd  test.gd
demo/scripts/tests/: vice.gd
project/: .gitignore  icon.svg.import  project.godot
project/addons/godotsource/: godotsource.gd
project/addons/godotsource/scripts/: vmt.gd
project/addons/godotsource/shaders/: unknown.gdshader
project/scripts/: test.gd
project/scripts/tests/: kv.gd  steam.gd  vcrypt.gd  vice.gd  vtf.gd
project/test/vtf/: image.vtf.import
project/test_assets/vtf/: image.vtf.import
res/: plugin.cfg.in
res/gdextension/: Debug.gdextension.in  Release.gdextension.in
src/_helpers/: Conversion.cpp  Conversion.h  Convert.cpp  Convert.h  _helpers.cmake
src/kv/: KeyValues.cpp  KeyValues.h  _kv.cmake  _kv.cpp
src/kvpp/: KeyValues.cpp  KeyValues.h  _kvpp.cmake  _kvpp.cpp
src/steam/: Steam.cpp  Steam.h  _steam.cmake  _steam.cpp
src/vcrypt/: VFONT.cpp  VFONT.h  VICE.cpp  _vcrypt.cmake  _vcrypt.cpp
src/vice/: VICE.cpp  VICE.h  _vice.cmake  _vice.cpp
src/vtf/: ImageLoaderVTF.cpp  ImageLoaderVTF.h  _vtf.cmake  _vtf.cpp
